# silica

./: .gitignore  Cargo.toml  Readme.md  Xargo.toml  gen_doc.sh
src/: io.rs  lib.rs  thread.rs  time.rs
src/peripheral/: gpio.rs  mod.rs  serial.rs
src/sync/: mod.rs  mpsc.rs
