[package]
name = "silica"
version = "0.0.1"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
description = "..."

# documentation = ""
homepage = "http://ithinuel.me"
repository = "https://github.com/silica-rs/silica"

readme = "Readme.md"

keywords = ["baremetal", "OS"]

license = "MIT"

[dependencies]
# silica-panic = { path = "../silica-panic" }
silica-core-allocator = { path = "../silica-allocator" }
silica-core-sync = { path = "../silica-core-sync" }
